# doccli

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: release_to_pypi.yml
doccli/: __init__.py  config.py  core.py  parse.py
examples/: basic.py  subcommands.py  webserver_conf.py
tests/: test_config.py  test_core.py  test_parse.py
