[tool.poetry]
name = "sid-doc-cli"
version = "0.0.5"
license = "Apache-2.0"
packages = [
    {include = "doccli"}
]
description = "Build Config classes that can be quickly turned into CLI specifications"
authors = ["siddu2020 <siddartha.k2020@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/siddu2020/doccli/"
repository = "https://github.com/siddu2020/doccli"

[tool.poetry.dependencies]
python = "^3.10"
decli = "^0.5.1"
docstring-parser = "^0.3"
pyyaml = "^5.1.2"

[tool.poetry.dev-dependencies]
black = {version = "^19.3b0", allows-prereleases = true}
pytest = "5.0.1"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
